4.x/features/circle-registration.md
---
description: PortalDotsを使えば、学園祭への企画参加登録をオンライン上で受け付けることができます。
---

# PortalDotsを使って企画参加登録を受け付ける

## 概要 <a href="#gai-yao" id="gai-yao"></a>

PortalDotsの「企画参加登録」機能を有効にすると、学園祭への企画参加登録をオンライン上で受け付けることができます。企画情報の入力から、責任者の登録、企画参加登録の提出までオンライン上で完結するため、企画参加登録を受け付ける手間が大幅に省けます。

受け付けた企画参加登録の一覧は、「スタッフモード」内の「企画情報管理」で確認でき、CSV形式で企画一覧をダウンロードすることもできます。「カスタムフォーム」機能を利用することで、企画参加登録フォームに独自の入力欄(設問)を追加することもできます。

![企画参加登録フォーム](<../.gitbook/assets/image (1).png>)

## 「企画参加登録」機能の事前設定 <a href="#no" id="no"></a>

### 「企画参加登録」機能を有効にする <a href="#wonisuru" id="wonisuru"></a>

「企画参加登録」機能を利用するには、まず「企画参加登録機能を有効にする」必要があります。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 「企画参加登録機能の設定」を選びます。
4. 「企画参加登録機能を有効にする」というボタンを選びます。「企画参加登録機能を有効にする」が表示されていない場合、「企画参加登録」機能は既に利用可能な状態になっています。

{% hint style="warning" %}
「企画参加登録」機能を有効にしただけでは、企画参加登録の受付は開始されません。企画参加登録の受付を開始するには、「企画参加登録の設定」を行う必要があります。
{% endhint %}

### 「企画参加登録」の受付を開始する（企画参加登録の設定） <a href="#nowosuruno" id="nowosuruno"></a>

「企画参加登録」機能を有効にすると、「企画参加登録」機能の設定を変更することができるようになります。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 以下の表に記載されている設定項目を変更できる画面が表示されます。設定を確認・変更し、「保存」を選びます。



| 設定項目                        | 説明                                                                                                                                                                                                         |
| --------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| 企画参加登録のカスタムフォーム             | <p>「企画参加登録」フォームでは、予め「企画名」と「団体名」の入力欄が表示されるようになっています。「カスタムフォーム」機能を使うことで、「企画名」と「団体名」以外の独自の入力欄(設問)を追加できます。<br><br>設問の追加・編集方法については、「<a href="../advanced/form-editor.md">フォームエディターで申請フォームを作成する</a>」をご覧ください。</p> |
| 企画参加登録を提出するために必要な企画担当者の最低人数 | 「企画参加登録」を提出する際に登録が必要な企画責任者と学園祭係(副責任者)の合計人数を設定できます。企画責任者に加え、学園祭係(副責任者)の登録を最低2人必要とする場合、3と入力してください。                                                                                                           |
| 受付開始日時                      | 「企画参加登録」を受付開始する日時を入力します。この日時以前、企画参加登録画面はユーザーには非表示となります。                                                                                                                                                    |
| 受付終了日時                      | 「企画参加登録」を受付開始する日時を入力します。この日時以降、企画参加登録画面はユーザーには非表示となります。                                                                                                                                                    |
| 参加登録画面の公開設定                 | 「企画参加登録」フォームを公開するには「公開する」にチェックを入れます。「公開する」にチェックが入っていても、受付開始日時以前・受付終了日時以降、「企画参加登録」フォームは公開されません。                                                                                                             |
| 参加登録前に表示する内容                | 「企画参加登録」フォームの冒頭に文章を表示することができます。「企画参加登録」にあたっての注意点や、企画参加規約などを表示する際にご活用ください。                                                                                                                                  |



## 「企画参加登録」の流れ <a href="#nore" id="nore"></a>

参加企画側が「企画参加登録」を提出しただけでは**企画参加登録は完了しません**。スタッフ側で提出された「企画参加登録」を確認し、企画を「受理」することで「企画参加登録」が完了します。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 「登録受理状況」が「**確認中**」となっている企画の✏️(編集)ボタンを選びます。
4. 入力されている企画情報を確認し、「企画参加登録」を受理する場合は「参加登録の受理設定」にある「**受理**」にチェックを入れます。
5. 「保存」を選びます。

{% hint style="info" %}
「登録受理状況」を「受理」または「不受理」にチェックを入れると、その企画のメンバーに対し、企画が受理された(されなかった)旨が記載されたメールが送信されます。
{% endhint %}

{% hint style="info" %}
企画編集画面に表示されるその他の入力項目についての詳細は、「[学園祭参加企画を手動でPortalDotsに登録・編集する](../advanced/manual-circle-registration.md#no)」をご覧ください。
{% endhint %}
