5.x/features/circle-registration.md
---
description: PortalDotsを使えば、学園祭への企画参加登録をオンライン上で受け付けることができます。
---

# PortalDotsを使って企画参加登録を受け付ける

## 概要 <a href="#gai-yao" id="gai-yao"></a>

PortalDotsの「企画参加登録」機能を有効にすると、学園祭への企画参加登録をオンライン上で受け付けることができます。企画情報の入力から、責任者の登録、企画参加登録の提出までオンライン上で完結するため、企画参加登録を受け付ける手間が大幅に省けます。

受け付けた企画参加登録の一覧は、「スタッフモード」内の「企画情報管理」で確認でき、CSV形式で企画一覧をダウンロードすることもできます。「カスタムフォーム」機能を利用することで、企画参加登録フォームに独自の入力欄(設問)を追加することもできます。

また、企画参加登録フォームは複数作成できます。例えば、「模擬店」や「ステージ企画」の参加登録を別のフォームで受け付けられます。

![企画参加登録フォーム](<../.gitbook/assets/image (11).png>)

## 「企画参加登録」機能の事前設定 <a href="#no" id="no"></a>

### 「参加種別」を作成する <a href="#wonisuru" id="wonisuru"></a>

「企画参加登録」機能を利用するには、まず参加種別を作成する必要があります。

{% hint style="info" %}
**参加種別とは？** — 企画ごとに1つだけ設定できる参加形態です。例えば、「模擬店」という参加種別を作成しておき、模擬店として参加する企画の参加種別は「模擬店」に設定します。
{% endhint %}

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 「参加種別を作成」を選びます。
4. 「参加種別名」を入力し、「保存」を選びます。

{% hint style="warning" %}
「参加種別」を作成しただけでは、企画参加登録の受付は開始されません。企画参加登録の受付を開始するには、「参加登録フォームの設定」を行う必要があります。
{% endhint %}

### 「企画参加登録」の受付を開始する（参加登録フォームの設定） <a href="#nowosuruno" id="nowosuruno"></a>

「参加種別」を作成すると、「企画参加登録」機能の設定を変更することができるようになります。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 参加登録フォームを作成したい参加種別を選びます。
4. 画面上部の「参加登録フォームの設定」タブを選びます。
5. 以下の表に記載されている設定項目を変更できる画面が表示されます。設定を確認・変更し、「保存」を選びます。

| 設定項目                        | 説明                                                                                                                                                                                                         |
| --------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| 企画参加登録のカスタムフォーム             | <p>「企画参加登録」フォームでは、予め「企画名」と「団体名」の入力欄が表示されるようになっています。「カスタムフォーム」機能を使うことで、「企画名」と「団体名」以外の独自の入力欄(設問)を追加できます。<br><br>設問の追加・編集方法については、「<a href="../advanced/form-editor.md">フォームエディターで申請フォームを作成する</a>」をご覧ください。</p> |
| 参加登録画面の公開設定                 | 「企画参加登録」フォームを公開するには「公開する」にチェックを入れます。「公開する」にチェックが入っていても、受付開始日時以前や受付終了日時以降は公開されません。                                                                                                             |
| 受付開始日時                      | 「企画参加登録」を受付開始する日時を入力します。この日時以前、企画参加登録画面はユーザーには非表示となります。                                                                                                                                                    |
| 受付終了日時                      | 「企画参加登録」を受付開始する日時を入力します。この日時以降、企画参加登録画面はユーザーには非表示となります。                                                                                                                                                    |
| 企画参加登録を提出するために必要な企画担当者の人数 | 「企画参加登録」を提出する際に登録が必要な企画責任者と学園祭係(副責任者)の合計人数を設定できます。企画責任者に加え、学園祭係(副責任者)の登録を最低2人必要とする場合、3と入力してください。                                                                                                           |
| 参加登録前に表示する内容                | 「企画参加登録」フォームの冒頭に文章を表示することができます。「企画参加登録」にあたっての注意点や、企画参加規約などを表示する際にご活用ください。                                                                                                                                  |
| 参加登録の提出後に表示する内容                | 参加登録を完了した方に向けて表示するメッセージを設定できます。この内容は、参加登録の提出ユーザーに自動で送信されるメールにも表示されます。
                                                                                                                                  |

## 「企画参加登録」を提出してもらった後は <a href="#nore" id="nore"></a>

参加企画側が「企画参加登録」を提出しただけでは**企画参加登録は完了しません**。スタッフ側で提出された「企画参加登録」を確認し、企画を「受理」することで「企画参加登録」が完了します。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 参加種別を選びます。
4. 「登録受理状況」が「**確認中**」となっている企画の✏️(編集)ボタンを選びます。
5. 入力されている企画情報を確認し、「企画参加登録」を受理する場合は「参加登録の受理設定」にある「**受理**」にチェックを入れます。
6. 「保存」を選びます。

{% hint style="info" %}
「登録受理状況」を「受理」または「不受理」にチェックを入れると、その企画のメンバーに対し、企画が受理された(されなかった)旨が記載されたメールが送信されます。
{% endhint %}

{% hint style="info" %}
企画編集画面に表示されるその他の入力項目についての詳細は、「[学園祭参加企画を手動でPortalDotsに登録・編集する](../advanced/manual-circle-registration.md#no)」をご覧ください。
{% endhint %}


## 参加登録で作成された企画に自動でタグを付与する <a href="#auto-tags" id="auto-tags"></a>

PortalDotsでは企画を「タグ」で分類できます。例えば、模擬店の企画には「模擬店」というタグを設定しておくと便利です。また、企画のメンバーが[閲覧できるお知らせを制限](../features/pages.md#orasewonayznitsuite)したり、[回答可能な申請フォームを制限](../features/forms.md#fmuhenayznitsuite)したりする目的でもタグを利用できます。

しかし、参加登録を受け付けた後、一つ一つの企画についてタグを手動で設定していくのは面倒です。そこで「作成した企画に自動で追加するタグ」を設定しておくと便利です。

1. 「スタッフモード」を開きます。
2. メニューから「企画情報管理」を選びます。
3. 自動でタグを付与したい参加種別を選びます。
4. 画面上部の「参加種別を編集」タブを選びます。
5. 「作成した企画に自動で追加するタグ」を入力し、「保存」を選びます。

{% hint style="info" %}
これらのタグが自動的に追加されるのは、この設定を保存した後に作成される企画のみです。この設定を編集する前に作成された企画について遡って自動でタグを付与することはできません。
{% endhint %}
